<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bonjour!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="display_matches">Matches</string>
    <string name="display_date">Date</string>
    <string name="account_manage_button">Manage My Account</string>
    <string name="title_activity_home_list_layout">HomeListLayoutActivity</string>
    <string name="signup_basic_info">Basic Information</string>
    <string name="signup_upload_icon">Upload User Icon</string>
    <string name="signup_detail_info">Detail Inforamtion</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="gender">Gender</string>
    <string name="user_avatar">User Avatar</string>
    <string name="user_name">Username</string>

    <string-array name="home_list_title">
        <item>Home</item>
        <item>Profile</item>
        <item>Matchings</item>
        <item>Change Password</item>
        <item>About</item>
        <item>Logout</item>
    </string-array>

    <string name="title_activity_find_password">FindPasswordActivity</string>
    <string name="title_activity_find_pass_fragment1">FindPassFragment1Activity</string>
    <string name="title_activity_find_pass_fragment2">FindPassFragment2Activity</string>
    <string name="title_activity_edit_profile">Edit Profile</string>

</resources>
