<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/profile_layout_top"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/user_avatar_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/user_avatar" 
            android:layout_marginRight="2dp"
            android:src="@drawable/ic_launcher"  >
        </ImageView>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
                    >
        <TextView
            android:id="@+id/profile_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
             />
        <TextView
            android:id="@+id/profile_user_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" />
            
            </LinearLayout>
    </LinearLayout>
    
    <TextView 
        android:id="@+id/profile_user_current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Current User Profile"
        android:textSize="25sp"
        android:layout_margin="10dp"
        />
    
    <TextView
        android:id="@+id/profile_user_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Birthday"
        android:textSize="20sp"
        android:layout_margin="10dp"
        />
    
    <TextView
        android:id="@+id/profile_user_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Age"
        android:textSize="20sp"
        android:layout_margin="10dp"
        />
    
    <TextView
        android:id="@+id/profile_user_desired_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Desired Range"
        android:textSize="20sp"
        android:layout_margin="10dp"
        />
    
        <TextView
        android:id="@+id/profile_user_phone_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Phone number"
        android:textSize="20sp"
        android:layout_margin="10dp"
        />
        
        <Button 
            android:id="@+id/profile_user_edit_profile_btn"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="Edit Profile"
            android:textSize="20sp" 
            android:layout_marginTop="10dp"
            android:layout_marginLeft="180dp"
            />

</LinearLayout>